--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Database Administrator</h3>
             <p class="font-italic">
-              A passionate DBA, who had created CI/CD architecture and implemented DevOps practices in different kind of organizations (Consulting companies, R&D Labs, Product based organisations and small/medium size startups). Before joining Walmart, I have worked with Intuit(Ranked #1 in best places to work for in India), DataTorrent, Amadeus, Altisource & Accenture. I have also worked for part time as Freelancer as well.
+              A passionate DBA, who had created created and maintained Databases from scratch. I have consulted regarding performance tuning of DB, helped in query optimization. Having exposer to clouds (Azure and AWS). Created Databses on Azure IAAS & PAAS (Azure SQL).
             </p>
             <div class="row">
               <div class="col-lg-6">
