--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I am a DBA with 8 plus years of experience and currently working with TCS, India.</p>
+          <p>I am a DBA with 8 plus years of experience and currently working with TCS, India. Currently mainly working on MS SQL.</p>
         </div>
 
         <div class="row">
@@ -97,7 +97,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Database Administrator</h3>
             <p class="font-italic">
-              A passionate DBA, who had created created and maintained Databases from scratch. I have consulted regarding performance tuning of DB, helped in query optimization. Having exposer to clouds (Azure and AWS). Created Databses on Azure IAAS & PAAS (Azure SQL).
+              A passionate DBA, who had created and maintained Databases from scratch. I have provided consultation regarding performance tuning & optimisation of SQL. Having exposer to clouds (Azure and AWS). Created Databases on Azure IAAS & PAAS (Azure SQL).
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -110,10 +110,10 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Full Time:</strong>Available</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Full Time:</strong> Available</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> MCA (Master of Computer Applications)</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> nehakocheta@gmail.com</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available(Part Time)</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available (Part Time)</li>
                 </ul>
               </div>
             </div>
@@ -146,7 +146,7 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="count-box">
               <i class="icofont-building"></i>
-              <span data-toggle="counter-up">4</span>
+              <span data-toggle="counter-up">5</span>
               <p><strong>Certifications</strong> </p>
             </div>
           </div>
@@ -154,8 +154,8 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="count-box">
               <i class="icofont-award"></i>
-              <span data-toggle="counter-up">2</span>
-              <p><strong>Awards</strong> </p>
+              <span data-toggle="counter-up">5</span>
+              <p><strong>Awards & Appreciations</strong> </p>
             </div>
           </div>
 
@@ -177,8 +177,9 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Skills</h2>
-          <p>I have worked on many tools and technologies. I am always open to learn any new tool or tech based on the requirement. Below is my current skill set</p>
+          <h2>Skills & Qualification</h2>
+          <p>Specializing in MSSQL database with almost 8.3 years of experience in various aspects of MSSQL including implementation, migration, maintenance, backup, monitoring, disaster recovery, replication, patching, upgrade and performance monitoring.</p>
+            <p> <br>    I have also provided on-call support, resolved incidents, provided RCAs and worked as L3 support. I have done automation for monitoring, reporting and alerting.  I have experince on on-pren data center and as well as cloud (mainly Azure). Below is my current skill set. I am mainly working on <b>MS SQL</b> Database now.</p>
         </div>
 
         <div class="row skills-content">
@@ -221,60 +222,60 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Python and Shell<i class="val">80%</i></span>
+              <span class="skill">Database Monitoring, Reporting and Alering<i class="val">100%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="80"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
 
           </div>
 
-          <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">Containers and Orchestration (Docker, Kubernetes, Docker Swarm) <i class="val">100%</i></span>
+              <span class="skill">Database Upgrade and Patching <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Source Code Management (GitHub, BitBucket, Perforce, SVN) <i class="val">100%</i></span>
+              <span class="skill">Providing L3 Support <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Slack Chatbots <i class="val">100%</i></span>
+              <span class="skill">Database Migration <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">OS - Linux(Mainly), Windows <i class="val">100%</i></span>
+              <span class="skill">HA, DR & Clustering<i class="val">100%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Build Tools (Maven, Ant, Gradle) <i class="val">100%</i></span>
+              <span class="skill">Log shipping, Mirroring, Replication <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Logging (Splunk, ELK) <i class="val">100%</i></span>
+              <span class="skill">Databse Planning <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
-          </div> -->
+          </div>
 
 
         </div>
@@ -296,7 +297,7 @@
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Neha Kocheta</h4>
-              <p><em>I have started my career in 2011 with TCS as DBA after completing my MCA from Indore. </em></p>
+              <p><em>I have started my career in 2012 with TCS as DBA after completing my MCA from Indore. </em></p>
               <ul>
                 <li>Whitefield, bangalore, India</li>
                 <li>(0091) 9769-7340-86</li>
@@ -306,23 +307,34 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>MCA - 70%</h4>
+              <h4>MCA (Distinction) - 77%</h4>
               <h5>2008 - 2011</h5>
               <p><em>Shri Vaishnav Institute of Technology & Science, Indore(M.P) </em></p>
-              <p>I scored 70th rank in MP-PET (state level engineering entrance exam) and got addmission in SGSITS, Indore in 2005. I have completed my engineering in Electronics & Telecommunication in 2009.</p>
+              <p>2nd Rank holder in the college.</p>
             </div>
             <div class="resume-item">
-              <h4>Higher Secondary (12th Standards) - 84%</h4>
+              <h4>B.Sc I.T (Distinction) - 78%</h4>
+              <h5>2004 - 2007</h5>
+              <p><em>Jiwaji University, Gwalior(M.P) </em></p>
+              <p>2nd Rank holder in the college.</p>
+            </div>
+
+            <div class="resume-item">
+              <h4>Higher Secondary (12th Standards) - 62%</h4>
               <h5>2003 - 2004</h5>
               <p><em>SVHSS, Ashoknagar(MP)</em></p>
-              <p>Completed my 12th from my hometown in 2004 with 84%. After that went to Kota for AIEEE preparation and spent 1 year in Kota, Rajsthan. </p>
+            </div>
+            <div class="resume-item">
+              <h4>High School (10th Standards) - 74%</h4>
+              <h5>2001 - 2002</h5>
+              <p><em>SVHSS, Ashoknagar(MP)</em></p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior DBA DevOps Engineer</h4>
-              <h5>2011 - Present</h5>
+              <h4>Senior DBA</h4>
+              <h5>2012 - Present</h5>
               <p><em>TCS, Bangalore, India </em></p>
               <!-- <ul>
                 <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
@@ -389,10 +401,11 @@
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/OCA.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
                 <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
-              </div>
+
+            </div>
+            <p><strong>OCA</strong> </p>
             </div>
           </div>
-
 
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
@@ -402,6 +415,29 @@
                 <a href="assets/img/portfolio/DB2.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
                 <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
               </div>
+              <p><strong>DB2</strong> </p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/agile.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/agile.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
+                <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+              </div>
+              <p><strong>Agile</strong> </p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/OCP-Score.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/OCP-Score.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
+                <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+              </div>
+              <p><strong>OCP Score</strong> </p>
             </div>
           </div>
 
@@ -412,8 +448,10 @@
                 <a href="assets/img/portfolio/award-1.jpg" data-gall="portfolioGallery" class="venobox" title="Card 2"><i class="bx bx-plus"></i></a>
                 <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
               </div>
+              <p><strong>Spot Award</strong> </p>
             </div>
           </div>
+
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
@@ -422,8 +460,45 @@
                 <a href="assets/img/portfolio/award-2.jpg" data-gall="portfolioGallery" class="venobox" title="Card 2"><i class="bx bx-plus"></i></a>
                 <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
               </div>
+              <p><strong>Spot Award</strong> </p>
             </div>
           </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/Appreciation-1.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/Appreciation-1.jpg" data-gall="portfolioGallery" class="venobox" title="Card 2"><i class="bx bx-plus"></i></a>
+                <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+              </div>
+              <p><strong>Appreciation Award</strong> </p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/Appreciation-2.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/Appreciation-2.jpg" data-gall="portfolioGallery" class="venobox" title="Card 2"><i class="bx bx-plus"></i></a>
+                <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+              </div>
+              <p><strong>Appreciation Award</strong> </p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/commitment-award.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/commitment-award.jpg" data-gall="portfolioGallery" class="venobox" title="Card 2"><i class="bx bx-plus"></i></a>
+                <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+              </div>
+              <p><strong>Commitment Award</strong> </p>
+            </div>
+          </div>
+
+
+
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
@@ -432,6 +507,7 @@
                 <a href="assets/img/portfolio/ITIL.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
                 <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
               </div>
+              <p><strong>ITIL</strong> </p>
             </div>
           </div>
 
