--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I am a DBA with 8 plus years of experience and currently working with TCS, India. Currently mainly working on MS SQL.</p>
+          <p>I am a DBA with 9 plus years of experience and working with TCS, India. Currently mainly working on MS SQL.</p>
         </div>
 
         <div class="row">
@@ -97,7 +97,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Database Administrator</h3>
             <p class="font-italic">
-              A passionate DBA, who had created and maintained Databases from scratch. I have provided consultation regarding performance tuning & optimisation of SQL. Having exposer to clouds (Azure and AWS). Created Databases on Azure IAAS & PAAS (Azure SQL).
+              A passionate DBA, who had created and maintained Databases from scratch. I have provided consultation regarding performance tuning & optimisation of SQL. Having exposer to clouds (Azure and AWS). Created Databases on Azure IAAS & PAAS (Azure SQL) and migrated on premises databases to cloud(Azure).
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -112,7 +112,7 @@
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Full Time:</strong> Available</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> MCA (Master of Computer Applications)</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> nehakocheta@gmail.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> nehakocheta10@gmail.com</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available (Part Time)</li>
                 </ul>
               </div>
@@ -138,7 +138,7 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
               <i class="icofont-calendar"></i>
-              <span data-toggle="counter-up">8</span>
+              <span data-toggle="counter-up">9</span>
               <p><strong>Years of Experience</strong></p>
             </div>
           </div>
@@ -146,7 +146,7 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="count-box">
               <i class="icofont-building"></i>
-              <span data-toggle="counter-up">5</span>
+              <span data-toggle="counter-up">6</span>
               <p><strong>Certifications</strong> </p>
             </div>
           </div>
@@ -178,7 +178,7 @@
 
         <div class="section-title">
           <h2>Skills & Qualification</h2>
-          <p>Specializing in MSSQL database with almost 8.3 years of experience in various aspects of MSSQL including implementation, migration, maintenance, backup, monitoring, disaster recovery, replication, patching, upgrade and performance monitoring.</p>
+          <p>Specializing in MSSQL database with almost 9+ years of experience in various aspects of MSSQL including implementation, migration, maintenance, backup, monitoring, disaster recovery, replication, patching, upgrade and performance monitoring.</p>
             <p> <br>    I have also provided on-call support, resolved incidents, provided RCAs and worked as L3 support. I have done automation for monitoring, reporting and alerting.  I have experince on on-pren data center and as well as cloud (mainly Azure). Below is my current skill set. I am mainly working on <b>MS SQL</b> Database now.</p>
         </div>
 
@@ -289,7 +289,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>I am a Senior DBA with 8+ years of experience and currently working TCS, India. </p>
+          <p>I am a Senior DBA with 9+ years of experience and currently working TCS, India. </p>
         </div>
 
         <div class="row">
@@ -301,7 +301,7 @@
               <ul>
                 <li>Whitefield, bangalore, India</li>
                 <li>(0091) 9769-7340-86</li>
-                <li>nehakocheta@gmail.com</li>
+                <li>nehakocheta10@gmail.com</li>
               </ul>
             </div>
 
@@ -333,7 +333,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior DBA</h4>
+              <h4>Senior DBA(L3)</h4>
               <h5>2012 - Present</h5>
               <p><em>TCS, Bangalore, India </em></p>
               <!-- <ul>
@@ -400,8 +400,6 @@
               <img src="assets/img/portfolio/OCA.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/OCA.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
-                <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
-
             </div>
             <p><strong>OCA</strong> </p>
             </div>
@@ -438,6 +436,16 @@
                 <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
               </div>
               <p><strong>OCP Score</strong> </p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/OCA.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/OCA.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
+            </div>
+            <p><strong>Six Sigma</strong> </p>
             </div>
           </div>
 
@@ -576,10 +584,7 @@
           </p>
         </div>
 
-
-
-
-        <div class="row" data-aos="fade-in">
+        <div class="row">
 
           <div class="col-lg-5 d-flex align-items-stretch">
             <div class="info">
@@ -598,7 +603,7 @@
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>nehakocheta@gmail.com</p>
+                <p>nehakocheta10@gmail.com</p>
               </div>
 
               <div class="phone">
@@ -616,40 +621,6 @@
 
               <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe> -->
             </div>
-
-          </div>
-
-          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <!-- <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-              <div class="form-row">
-                <div class="form-group col-md-6">
-                  <label for="name">Your Name</label>
-                  <input type="text" name="name" class="form-control" id="name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                  <div class="validate"></div>
-                </div>
-                <div class="form-group col-md-6">
-                  <label for="name">Your Email</label>
-                  <input type="email" class="form-control" name="email" id="email" data-rule="email" data-msg="Please enter a valid email" />
-                  <div class="validate"></div>
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="name">Subject</label>
-                <input type="text" class="form-control" name="subject" id="subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                <div class="validate"></div>
-              </div>
-              <div class="form-group">
-                <label for="name">Message</label>
-                <textarea class="form-control" name="message" rows="10" data-rule="required" data-msg="Please write something for us"></textarea>
-                <div class="validate"></div>
-              </div>
-              <div class="mb-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form> -->
           </div>
 
         </div>
