--- a/index.html
+++ b/index.html
@@ -441,11 +441,11 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/OCA.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/E-certficate-Siix-sigma.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/OCA.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/E-certficate-Siix-sigma.png" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
             </div>
-            <p><strong>Six Sigma</strong> </p>
+            <p><strong>Lean Six Sigma Green Belt</strong> </p>
             </div>
           </div>
 
