Updating WM Experience

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Neha Kocheta</h1>
-      <p>I'm <span class="typed" data-typed-items="DBA (Databse Administrator)"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Hands on Database Engineering Leader"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -87,7 +87,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I am a DBA with 9 plus years of experience and working with TCS, India. Currently mainly working on MS SQL.</p>
+          <p>I am a DBA with 12+ years of experience and working with Walmart Global Tech, India.</p>
         </div>
 
         <div class="row">
@@ -97,7 +97,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Database Administrator</h3>
             <p class="font-italic">
-              A passionate DBA, who had created and maintained Databases from scratch. I have provided consultation regarding performance tuning & optimisation of SQL. Having exposer to clouds (Azure and AWS). Created Databases on Azure IAAS & PAAS (Azure SQL) and migrated on premises databases to cloud(Azure).
+              Experienced Database Engineer with 12+ years of expertise in MSSQL and Azure SQL. Skilled in managing and optimizing database systems to ensure high availability, performance, and data integrity. Currently working as Senior/Lead Database Engineer for Walmart, overseeing 500+ Highly transactional, scalable and cloud native production databases which are service millions of customer every day. Possesses a strong understanding of cloud technologies, including AWS, Azure, and GCP. Demonstrated exposure to various RDBMS.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -333,22 +333,16 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior DBA(L3)</h4>
-              <h5>2012 - Present</h5>
-              <p><em>TCS, Bangalore, India </em></p>
-              <!-- <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
-              </ul> -->
-            </div>
-            <!-- <div class="resume-item">
-              <h4>Senior DevOps Engineer</h4>
-              <h5>Jan-2017 - Oct-2018</h5>
-              <p><em>Intuit, Bangalore, India</em></p>
+              <h4>Senior Database Engineer</h4>
+              <h5>Oct-2023 to Present</h5>
+              <p><em>Walmart Global Tech, Bangalore, India </em></p>
             </div>
             <div class="resume-item">
+              <h4>Senior DBA(L3)</h4>
+              <h5>Mar-2012 - Oct-2023</h5>
+              <p><em>TCS, Bangalore, India </em></p>
+            </div>
+            <!-- <div class="resume-item">
               <h4>DevOps & SRE Engineer</h4>
               <h5>Jun-2016 - Dec-2016</h5>
               <p><em>DataTorrent, Bangalore, India</em></p>
