--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
             <div class="resume-item">
               <h4>Senior Database Engineer</h4>
               <h5>Oct-2023 to Present</h5>
-              <p><em>Walmart Global Tech, Bangalore, India </em></p>
+              <img src="assets/img/walmart.png"> <p><em>Walmart Global Tech, Bangalore, India </em></p>
             </div>
             <div class="resume-item">
               <h4>Senior DBA(L3)</h4>
