--- a/index.html
+++ b/index.html
@@ -335,12 +335,12 @@
             <div class="resume-item">
               <h4>Senior Database Engineer</h4>
               <h5>Oct-2023 to Present</h5>
-              <img src="assets/img/walmart.png"> <p><em>Walmart Global Tech, Bangalore, India </em></p>
+              <p><img src="assets/img/walmart.png" alt="" height="20" width="20"><em>Walmart Global Tech, Bangalore, India </em></p>
             </div>
             <div class="resume-item">
               <h4>Senior DBA(L3)</h4>
               <h5>Mar-2012 - Oct-2023</h5>
-              <p><em>TCS, Bangalore, India </em></p>
+              <p><img src="assets/img/TCS.png" alt="" height="20" width="20"><em>TCS, Bangalore, India </em></p>
             </div>
             <!-- <div class="resume-item">
               <h4>DevOps & SRE Engineer</h4>
